First implementation of multi-repo cloning